# CEvNS_graduation_project

./: .gitignore  AllBkg.mac  CMakeLists.txt  CsI_Cs134.card  CsI_Cs134.mac  CsI_simu.sh  README.md  SimuCard.card  nuHunter.cc  starXP.cc  vis.mac
source/AnalysisManager/include/: Linkdef.h  MyAnalysisManager.hh  MyAnalysisMessenger.hh  MyG4BasedAnalysis.hh  MyRootBasedAnalysis.hh  SimDeposit.h  SimEvent.h  SimTrack.h
source/AnalysisManager/src/: MyAnalysisManager.cc  MyAnalysisMessenger.cc  MyG4BasedAnalysis.cc  MyRootBasedAnalysis.cc
source/DetectorConstruction/gdml/: main.gdml  testWater.gdml
source/DetectorConstruction/gdml/Material/: Material.xml
source/DetectorConstruction/gdml/Material/Predefined/Calculate/Reference/Absorption/: Read.C  oxygen_absorption_PHENIX.csv  water_absorption_PHENIX.csv
source/DetectorConstruction/gdml/Material/Predefined/Calculate/Reference/Reflectivity/: Al-VUV-reflection.csv
source/DetectorConstruction/gdml/Material/Predefined/Calculate/Reference/Refraction/: Read.C  RefractiveIndexINFO-CaF2.csv  RefractiveIndexINFO-MgF2.csv
source/DetectorConstruction/gdml/Material/Predefined/Calculate/Reference/WindowTransparency/: CaF2_10mm_transparency.txt  CaF2_5mm_transparency.txt  MgF2_10mm_transparency.txt  MgF2_5mm_transparency.txt  MgF2_8mm_transparency.txt  Silica_10mm_transparency.txt  Silica_8mm_transparency.txt
source/DetectorConstruction/gdml/Material/Predefined/Calculate/Reference/WindowTransparency/copy/: And_cr_crack_transparency.txt  And_cr_nocrack_transparency.txt  CaF2_10mm_transparency.txt  CaF2_5mm_transparency.txt  MgF2_10mm_transparency.txt  MgF2_8mm_transparency.txt  Silica_10mm_circle_transparency.txt  Silica_10mm_transparency.txt  Silica_5mm_transparency.txt
source/DetectorConstruction/gdml/Material/Predefined/GasMixture/lists/: GasMixture.xml
source/DetectorConstruction/gdml/Material/Predefined/Opticals/: GenMix.C  OptMaterials.xml
source/DetectorConstruction/gdml/Material/Predefined/Scintillator/: Scintillator.xml
source/DetectorConstruction/gdml/Material/Predefined/Scintillator/lists/: ScinCsI.xml
source/DetectorConstruction/gdml/Structure/Arrange/: Detector_for_cevns.gdml  Detector_for_cevns_ver2.gdml  Detector_for_cevns_ver3.gdml  Detector_for_cevns_ver4.gdml  Detector_for_cevns_ver5.gdml  ShapeList.gdml  TRD.gdml  aCopy.gdml
source/DetectorConstruction/include/: MyDetectorConstruction.hh  MyDetectorMessenger.hh  MyDetectorReader.hh  MyDetectorSettings.hh  MyMagneticField.hh  PrimaryDescription.hh  RadiatorDescription.hh
source/DetectorConstruction/src/: MyDetectorConstruction.cc  MyDetectorMessenger.cc  MyDetectorSettings.cc  MyGDMLCustom.cc  MyMagneticField.cc
source/G4Actions/include/: MyActionInitialization.hh  MyRunAction.hh  MyRunManager.hh  Verbose.hh
source/G4Actions/src/: MyActionInitialization.cc  MyEvtAction.cc  MyRunAction.cc  MyRunManager.cc  MyStackAction.cc  MyStepAction.cc  MyTrackAction.cc  Verbose.cc
source/GPSModule/: AllBkg.mac
source/GPSModule/include/: ExGeneralParticleSource.hh  ExGeneralParticleSourceMessenger.hh  ExSPSAngDistribution.hh  ExSPSEneDistribution.hh  ExSPSPosDistribution.hh  ExSPSTimDistribution.hh  ExSingleParticleSource.hh  JPCosmicMuonGun.hh  JPMapMuonGun.hh  JPSimPrimaryVertexInformation.hh  JPUniformMuonGun.hh  ModifiedGaisserFormula.h
source/GPSModule/src/: ExGeneralParticleSource.cc  ExGeneralParticleSourceMessenger.cc  ExSPSAngDistribution.cc  ExSPSEneDistribution.cc  ExSPSPosDistribution.cc  ExSPSTimDistribution.cc  ExSingleParticleSource.cc  JPCosmicMuonGun.cc  JPMapMuonGun.cc  JPUniformMuonGun.cc
source/Generator/DecayTest/: CMakeLists.txt  main.cpp
source/Generator/data/EC/: Cs134.txt  K40.txt
source/Generator/data/IBD/: IBDspectrum.txt
source/Generator/data/alpha/: Bi212.txt  Po210.txt  Po212.txt  Po214.txt  Po216.txt  Po218.txt  Ra224.txt  Ra226.txt  Rn220.txt  Rn222.txt  Th228.txt  Th230.txt  Th232.txt  U234.txt  U238.txt
source/Generator/data/beta/: Ac228.txt  Bi210.txt  Bi212.txt  Bi214.txt  Co60.txt  Cs134.txt  Cs137.txt  Pa234.txt  Pb210.txt  Pb212.txt  Pb214.txt  Ra228.txt  Rb87.txt  Th234.txt  Tl208.txt  Tl210.txt
source/Generator/data/nCaptureGammas/: Gd155G4NeutronCaptureGammas.txt
source/Generator/include/: AlphaBranch.hh  BetaBranch.hh  BetaSpec.hh  DecayBranch.hh  DecaySpec.hh
source/Generator/src/: AlphaBranch.cc  BetaBranch.cc  BetaSpec.cc  DecayBranch.cc  DecaySpec.cc
source/OldG4Class/src/: G4PhysicsOrderedFreeVector.cc
source/ParticleGunGenerator/include/: CSVInputEnergy.hh  GPSFromMAC.hh  PGGenerator.hh  PGGeneratorList.hh  PGNeutron.hh  PGRandomNucleus.hh  SimpleParticleGun.hh
source/ParticleGunGenerator/src/: CSVInputEnergy.cc  GPSFromMAC.cc  PGGenerator.cc  PGGeneratorList.cc  PGNeutron.cc  PGRandomNucleus.cc  SimpleParticleGun.cc
source/ParticleSource/include/: MyExGPS.hh  MyParticleGun.hh  MyParticleGunMessenger.hh  MyPrimaryGeneratorGPS.hh
source/ParticleSource/src/: MyExGPS.cc  MyParticleGun.cc  MyParticleGunMessenger.cc  MyPrimaryGeneratorGPS.cc
source/PhysicsList/include/: MyNeutronPhys.hh  MyPhysListEM.hh  MyPhysListOp.hh  MyPhysicsList.hh
source/PhysicsList/src/: MyNeutronPhys.cc  MyPhysListEM.cc  MyPhysListOp.cc  MyPhysListTRD.cc  MyPhysicsList.cc
